part of #1804, fix navbar on mobile

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -112,7 +112,3 @@ code, code > * {
 img {
   max-width: 100%;
 }
-
-.navbar-header {
-  padding-right: 60px;
-}
